moved arrowhead defs into separate invisible svg. fixes #301

--- a/static/css/graph.css
+++ b/static/css/graph.css
@@ -1,5 +1,5 @@
 /****************************************************************************************
- * Copyright (c) 2012 Justus Wingert, Klaus Greff, Maik Nauheim                         *
+ * Copyright (c) 2014 Klaus Greff, Johannes Merkert, Maik Nauheim                       *
  *                                                                                      *
  * This file is part of Findeco.                                                        *
  *                                                                                      *
@@ -27,46 +27,46 @@ div.graph {
     position: relative;
 }
 
-div.graph .link {
+svg .link {
     stroke: #6d6d6d;
     stroke-width: 2px;
 }
 
-div.graph .arrowHead {
+svg .linkHead {
     fill: #6d6d6d;
 }
 
-div.graph .active .nodeBackgroundCircle {
+svg .active .nodeBackgroundCircle {
     fill: #2d7cc4;
 }
 
-div.graph .inactive .nodeBackgroundCircle {
+svg .inactive .nodeBackgroundCircle {
     fill: #DDD;
 }
 
-div.graph .nodeShadow {
+svg .nodeShadow {
     fill: #999;
 }
 
-div.graph .inactive .nodeLabel {
+svg .inactive .nodeLabel {
     fill: #e07b01;
     font-weight: bold;
 }
 
-div.graph .inactive.nodeGroup:hover .nodeLabel {
+svg .inactive.nodeGroup:hover .nodeLabel {
     fill: #2d7cc4;
 }
 
-div.graph .active.nodeGroup:hover .nodeLabel {
+svg .active.nodeGroup:hover .nodeLabel {
     fill: #fff;
 }
 
-div.graph .active .nodeLabel {
+svg .active .nodeLabel {
     font-weight: bold;
     fill: #fff;
 }
 
-div.graph .nodeGroup {
+svg .nodeGroup {
 }
 
 div #tooltip {
